[package]
name = "ftp2webdav-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
libunftp = "0.21.0"
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }
# unftp-sbe-webdav = { path = "unftp-sbe-webdav" }
unftp-sbe-webdav = { version = "0.2.0" }

# TODO: Remove this section once https://github.com/bolcom/libunftp/pull/539
# has been merged and a new version released for libunftp.
[patch.crates-io]
libunftp = { git = "https://github.com/Javex/libunftp.git", branch = "master" }
